# libgit2pp

./: .gitignore  AUTHORS  Makefile.am  README  README.md  configure.ac
src/: Makefile.am  blob.cpp  blob.hpp  branch.cpp  branch.hpp  commit.cpp  commit.hpp  common.cpp  common.hpp  config.cpp  config.hpp  database.cpp  database.hpp  diff.cpp  diff.hpp  exception.cpp  exception.hpp  git2pp.hpp  index.cpp  index.hpp  libgit2pp.pc  libgit2pp.pc.in  object.cpp  object.hpp  oid.cpp  oid.hpp  ref.cpp  ref.hpp  remote.cpp  remote.hpp  repository.cpp  repository.hpp  revwalk.cpp  revwalk.hpp  signature.cpp  signature.hpp  status.cpp  status.hpp  tag.cpp  tag.hpp  (+4 more)
