dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(libgit2pp, 0.17.0)

AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE([1.11])

AM_SILENT_RULES([yes])

AC_PROG_CXX
AX_CXX_COMPILE_STDCXX_11



LT_INIT



PKG_CHECK_MODULES(LIBGIT2PP, [libgit2 = 0.17.0])




AC_OUTPUT([
Makefile
src/Makefile
src/libgit2pp.pc
])
